CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT(FirstCppProject)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET(SOURCE_FILES main.cpp)
FIND_PACKAGE (Boost 1.55 COMPONENTS program_options REQUIRED)
LINK_DIRECTORIES(${LINK_DIRECTORIES} ${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(FirstCppProject ${SOURCE_FILES})
